<resources>
    <string name="app_name">KeeLink</string>

    <string name="action_settings">Fast Flag (Beta)</string>
    <string name="enable_as_plugin">Enable/Disable</string>
    <string name="choose_hostname">Change Host</string>
    <string name="about">About</string>
    <string name="howto">How to</string>
    <string name="privacy">Privacy Policy</string>

    <string name="kp2aplugin_title">KeeLink Plugin</string>
    <string name="kp2aplugin_shortdesc">Send password from Keepass to other devices </string>
    <string name="kp2aplugin_author">Andrea Cioni</string>

    <string name="app_version">1.0.1</string>

    <string name="kp2aplugin_menu_entry">Send</string>

    <string name="kp2aplugin_loading_entry">Processing</string>
    <string name="onlineInfoText">online on https://keelink.cloud</string>
    <string name="versionPlaceholder">v:1.0.0</string>
    <string name="onlineIconText">Go online</string>
    <string name="choose_hostname_message">Enter the base URL of KeeLink service if you want to use a custom one</string>
</resources>
