<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.andreacioni.kp2a.plugin.keelink.MainActivity"
    android:layout_width="match_parent">

    <item
        android:id="@+id/menu_item_switch"
        android:title=""
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/toolbar_items" />

    <item android:id="@+id/action_settings" android:orderInCategory="100"
        android:title="@string/action_settings" app:showAsAction="never"
        android:visible="false" />
    <item android:id="@+id/howto"
        android:title="@string/howto" />
    <item android:title="@string/about"
        android:id="@+id/about" />

    <item android:icon="@drawable/ic_language_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/onlineIconText"/>

    <item android:title="@string/versionPlaceholder"
        android:id="@+id/menuVersion"
        android:checkable="false"
        android:enabled="false" />
</menu>
